# omri-usb

./: .gitignore  build.gradle  settings.gradle  settings.gradle.kts
omri-usb-native/: .gitignore  CMakeLists.txt  build.gradle
omri-usb-native/cmake/modules/: FindLIBUSB.cmake.old
omri-usb-native/src/main/cpp/: callbackhandle.h  dabensemble.h  dabmpegservicecomponentdecoder.cpp  dabmpegservicecomponentdecoder.h  dabplusservicecomponentdecoder.cpp  dabplusservicecomponentdecoder.h  dabservicecomponentdecoder.cpp  dabservicecomponentdecoder.h  dabservicecomponentmscpacketdata.h  dabservicecomponentmscstream.cpp  dabservicecomponentmscstream.h  dabservicecomponentmscstreamaudio.cpp  dabservicecomponentmscstreamaudio.h  dabservicecomponentmscstreamdata.h  dabthread.cpp  dabthread.h  daemon-env.h  datatypes.h  dynamiclabeldecoder.cpp  dynamiclabeldecoder.h  ficparser.cpp  ficparser.h  fig_00.h  fig_00_ext_00.h  fig_00_ext_02.cpp  fig_00_ext_03.cpp  fig_00_ext_06.h  fig_00_ext_07.cpp  fig_00_ext_13.cpp  fig_00_ext_17.cpp  fig_00_ext_20.cpp  fig_00_ext_21.cpp  fig_00_ext_21.h  fig_00_ext_24.cpp  fig_00_ext_24.h  fig_01.cpp  fig_01_ext_04.cpp  global_definitions.h  mscdatagroupdecoder.cpp  paddecoder.cpp  (+4 more)
omri-usb-native/src/main/cpp/headers/: jnihelper.h
omri-usb-native/src/main/cpp/platformspecific/android/: dabusbtunerinput.h  demousbtunerinput.cpp  demousbtunerinput.h  ediinput.cpp  ediinput.h  jdabservice.cpp  jdabservice.h  jni-helper.cpp  jtunerusbdevice.cpp  jtunerusbdevice.h  jusbdevice.cpp  jusbdevice.h  log4jbridge.cpp  log4jbridge.h  native-lib.cpp  raontunerinput.cpp  raontunerinput.h  stdoutbridge.h  usbhost.h
omri-usb-native/src/main/cpp/test/: fig017.cpp
omriusb/: .gitignore  CMakeLists.txt  build.gradle
omriusb/libs/: readme-gozirra-client.txt
omriusb/src/main/: AndroidManifest.xml
omriusb/src/main/cpp/: callbackhandle.h  concurrent_queue.h  dabensemble.cpp  dabensemble.h  dabinput.h  dabmpegservicecomponentdecoder.cpp  dabmpegservicecomponentdecoder.h  dabplusservicecomponentdecoder.cpp  dabservice.cpp  dabservice.h  dabservicecomponent.cpp  dabservicecomponent.h  dabservicecomponentdecoder.cpp  dabservicecomponentmscpacketdata.cpp  dabservicecomponentmscstreamaudio.cpp  dabservicecomponentmscstreamdata.cpp  dabthread.cpp  dabthread.h  ficparser.cpp  ficparser.h  fig.h  fig_00_ext_03.h  fig_00_ext_06.cpp  fig_00_ext_08.cpp  fig_00_ext_08.h  fig_00_ext_10.cpp  fig_00_ext_10.h  fig_00_ext_13.h  fig_01.cpp  fig_01.h  global_definitions.h  linkedservicedab.h  registered_tables.h  slideshowdecoder.cpp
omriusb/src/main/cpp/platformspecific/android/: androidlogbuf.h  dabusbtunerinput.h  demousbtunerinput.cpp  demousbtunerinput.h  ediinput.cpp  jdabservice.cpp  jni-helper.cpp  jni-helper.h  jtunerusbdevice.cpp  jtunerusbdevice.h  jusbdevice.cpp  jusbdevice.h  log4jbridge.h  native-lib.cpp  raontunerinput.cpp  raontunerinput.h
omriusb/src/main/cpp/test/: fig006.cpp  fig021.cpp  readme.txt
omriusb/src/main/java/com/thiakil/nativebridge/: Log4jBridge.java
omriusb/src/main/java/com/thiakil/standin/: AsyncTask.java  Context.java
omriusb/src/main/java/eu/hradio/core/radiodns/: RadioDnsCallback.java  RadioDnsCore.java  RadioDnsCoreLookupCallback.java  RadioDnsFactory.java  RadioDnsService.java  RadioDnsServiceEpg.java  RadioDnsServiceEpgPiCallback.java  RadioDnsServiceEpgSiCallback.java  RadioDnsServiceSpi.java  RadioDnsServiceTag.java  RadioDnsServiceType.java  RadioDnsServiceVis.java  RadioDnsServiceWeb.java  RadioDnsServiceWebCallback.java  RadioEpgParser.java  RadioEpgPiParser.java  RadioEpgProgrammeInformation.java  RadioEpgServiceInformation.java  RadioEpgSiParser.java  RadioWebApplication.java  RadioWebApplicationControl.java  RadioWebApplicationInformationList.java  RadioWebApplicationParser.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/dtos/: Pageable.java  SearchNode.java  Sort.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/exception/: ErrorCodes.java  HRadioSearchClientException.java  JsonDecoderTypeMismatch.java  JsonEncoderTypeMismatch.java  NameNotUniqueException.java  NetworkException.java  NoResultFoundException.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/listener/: OnErrorListener.java  OnSearchResultListener.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/parser/: JsonParser.java  XMLParser.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/query/: HRadioQuery.java  HRadioQueryImpl.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/service/: AsyncRequestTask.java  HRadioHttpClient.java  HRadioHttpClientImpl.java  HttpConstants.java  MetaDataSearchClient.java  MetaDataSearchClientImpl.java  PodcastService.java  PodcastServiceImpl.java  RecommendationClient.java  RecommendationClientImpl.java  SearchDelegate.java  SearchNodeResolver.java  SearchNodeResolverImpl.java  ServiceSearchClient.java  ServiceSearchClientImpl.java  ServiceUseClient.java  ServiceUseClientImpl.java  UserReportClient.java  UserReportClientImpl.java
omriusb/src/main/java/eu/hradio/httprequestwrapper/util/: HRadioUrlEncoder.java  StringUtils.java  TimeUtils.java
omriusb/src/main/java/org/omri/radio/: Radio.java
omriusb/src/main/java/org/omri/radio/impl/: DabAudioDecoder.java  DabAudioDecoderFactory.java  DemoTuner.java  IpServiceScanner.java  NativeHelper.java  RadioImpl.java  RadioServiceDabComponentImpl.java  RadioServiceDabImpl.java  RadioServiceDabNative.java  RadioServiceDabUserApplicationImpl.java  RadioServiceDemo.java  RadioServiceImpl.java  RadioServiceIpImpl.java  RadioServiceManager.java  SafeUtf.java  TextualDabDynamicLabelImpl.java  TextualDabDynamicLabelPlusItemImpl.java  TextualImpl.java  TunerEdistream.java  TunerIpShoutcast.java  TunerUsb.java  TunerUsbCallbackTypes.java  TunerUsbImpl.java  UsbHelper.java  (+2 more)
omriusb/src/main/java/org/omri/radioservice/: RadioService.java  RadioServiceDabComponent.java  RadioServiceDabNative.java  RadioServiceFollowingListener.java  RadioServiceListener.java
omriusb/src/main/java/org/omri/tuner/: Tuner.java  TunerListener.java  TunerStatus.java
(+267 files in other folders)
